--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jellycorrd</title>
+    <title>Anchorr</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Jellycorrd</h1>
+      <h1>Anchorr</h1>
       <p class="placeholder">
         A full Web UI is planned for the near future. For now, this page
         provides manual setup instructions.
@@ -16,7 +16,7 @@
 
       <h2>Manual Configuration Guide</h2>
       <p>
-        Jellycorrd is a self-hosted Discord bot that connects to Jellyfin and
+        Anchorr is a self-hosted Discord bot that connects to Jellyfin and
         Jellyseerr. Configuration is done via an <code>.env</code> file in the
         project root.
       </p>
@@ -26,7 +26,7 @@
         <li>
           Clone the repository from
           <a
-            href="https://github.com/nairdahh/jellycorrd"
+            href="https://github.com/nairdahh/Anchorr"
             target="_blank"
             rel="noopener noreferrer"
             >GitHub</a
@@ -132,7 +132,7 @@
 
       <div class="footer">
         <a
-          href="https://github.com/nairdahh/jellycorrd"
+          href="https://github.com/nairdahh/anchorr"
           target="_blank"
           rel="noopener noreferrer"
           >View on GitHub</a
