--- a/web/index.html
+++ b/web/index.html
@@ -172,6 +172,16 @@
                           Discord client)
                         </div>
                       </div>
+
+                      <div class="form-group" style="margin-top: 1rem;">
+                        <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
+                          <input type="checkbox" id="AUTO_START_BOT" name="AUTO_START_BOT" />
+                          Auto-start bot on server boot
+                        </label>
+                        <div class="form-text">
+                          If enabled, the bot starts automatically when the container restarts and valid Discord credentials are present.
+                        </div>
+                      </div>
                     </fieldset>
                   </div>
 
