--- a/web/index.html
+++ b/web/index.html
@@ -307,6 +307,20 @@
                           style="margin-left: 1rem;"
                         ></span>
                       </div>
+                      <div class="form-group" style="margin-top: 1rem;">
+                        <label style="display:flex;align-items:center;gap:0.5rem;cursor:pointer;">
+                          <input type="checkbox" id="ENABLE_NOTIFICATIONS" name="ENABLE_NOTIFICATIONS" />
+                          Enable Jellyfin notifications
+                        </label>
+                        <div class="form-text">If disabled, webhook requests are accepted but no Discord messages are sent.</div>
+                      </div>
+                      <div class="form-group" style="margin-top: 1rem;">
+                        <label style="display:flex;align-items:center;gap:0.5rem;cursor:pointer;">
+                          <input type="checkbox" id="EPHEMERAL_INTERACTIONS" name="EPHEMERAL_INTERACTIONS" />
+                          Ephemeral Interactions
+                        </label>
+                        <div class="form-text">If enabled, search and request responses are only visible to you.</div>
+                      </div>
                       <div class="form-group">
                         <label for="JELLYFIN_SERVER_ID"
                           >Jellyfin Server ID</label
@@ -340,37 +354,6 @@
                           media notifications will be sent. Right click the
                           channel -&gt; Copy Channel ID (Developer Mode must be
                           enabled in your Discord client)
-                        </div>
-                      </div>
-
-                      <div id="webhook-section" class="webhook-box" style="margin-top: 1rem;">
-                        <h3 class="webhook-title">Your Jellyfin Webhook URL</h3>
-                        <div class="webhook-content">
-                          <p>
-                            To receive notifications, add this URL to your <strong class="emphasis-mauve">Jellyfin Webhooks plugin</strong> settings:
-                          </p>
-                          <div class="webhook-url-container">
-                            <code id="webhook-url" class="code-block"></code>
-                            <button
-                              type="button"
-                              id="copy-webhook-btn"
-                              class="btn btn-secondary"
-                            >Copy URL</button>
-                          </div>
-                          <p style="margin-top: 0.75rem; font-size: 0.9rem; opacity: 0.8;">
-                            <strong>Note:</strong> If you're running Anchorr in Docker, you may need to replace <code>localhost</code> with your server's IP address.
-                          </p>
-                          <p style="margin-top: 1.5rem;">If you don't have the plugin installed, access the <strong class="emphasis-mauve">Plugins page</strong> in your <strong class="emphasis-mauve">Jellyfin Dashboard</strong>, search for <strong class="emphasis-mauve">Webhook</strong>, install it and restart the server.</p>
-                          <p>After the reset, access your <strong class="emphasis-mauve">Webhook plugin settings</strong> and <strong class="emphasis-mauve">Add Discord Destination</strong>.</p>
-                          <ol style="padding-left: 1.5rem; opacity: 0.9;">
-                            <li>Complete the <strong class="emphasis-mauve">Server Url</strong> with your Jellyfin server's base URL.</li>
-                            <li>Insert the previously specified URL in the <strong class="emphasis-mauve">Webhook Url</strong> field.</li>
-                            <li><strong class="emphasis-mauve">Status</strong> must be <strong class="emphasis-mauve">Enabled</strong>.</li>
-                            <li>For <strong class="emphasis-mauve">Notification Type</strong> enable <strong class="emphasis-mauve">Item Added</strong>.</li>
-                            <li>For <strong class="emphasis-mauve">Item Type</strong> select your desired content you want to receive notifications for.</li>
-                            <li>Enable <strong class="emphasis-mauve">Send All Properties</strong>.</li>
-                            <li><strong class="emphasis-mauve">Save</strong>.</li>
-                          </ol>
                         </div>
                       </div>
                     </fieldset>
