--- a/web/index.html
+++ b/web/index.html
@@ -182,6 +182,16 @@
                           If enabled, the bot starts automatically when the container restarts and valid Discord credentials are present.
                         </div>
                       </div>
+
+                      <div class="form-group" style="margin-top: 1rem;">
+                        <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
+                          <input type="checkbox" id="EPHEMERAL_INTERACTIONS" name="EPHEMERAL_INTERACTIONS" />
+                          Ephemeral Interactions
+                        </label>
+                        <div class="form-text">
+                          If enabled, search and request responses are only visible to you.
+                        </div>
+                      </div>
                     </fieldset>
                   </div>
 
@@ -306,13 +316,6 @@
                           id="test-jellyfin-status"
                           style="margin-left: 1rem;"
                         ></span>
-                      </div>
-                      <div class="form-group" style="margin-top: 1rem;">
-                        <label style="display:flex;align-items:center;gap:0.5rem;cursor:pointer;">
-                          <input type="checkbox" id="EPHEMERAL_INTERACTIONS" name="EPHEMERAL_INTERACTIONS" />
-                          Ephemeral Interactions
-                        </label>
-                        <div class="form-text">If enabled, search and request responses are only visible to you.</div>
                       </div>
                       <div class="form-group">
                         <label for="JELLYFIN_SERVER_ID"
