--- a/web/index.html
+++ b/web/index.html
@@ -311,6 +311,20 @@
                         </div>
                       </div>
                       <div class="form-group">
+                        <label for="JELLYFIN_API_KEY"
+                          >Jellyfin API Key</label
+                        >
+                        <input
+                          type="password"
+                          id="JELLYFIN_API_KEY"
+                          name="JELLYFIN_API_KEY"
+                          placeholder="c4b6b3c8f1d4f0a8a6c2e4d8f1b3c7a9"
+                        />
+                        <div class="form-text">
+                          The API key for your Jellyfin server. You can generate one in your Jellyfin Dashboard under Administration → API Keys.
+                        </div>
+                      </div>
+                      <div class="form-group">
                         <button type="button" id="test-jellyfin-btn" class="btn btn-secondary" style="padding: 0.5rem 1rem;">Test Endpoint</button>
                         <span
                           id="test-jellyfin-status"
