fixed permissions and config preserve

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="/libs/coloris/coloris.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" />
     <link rel="icon" href="assets/logo.png" type="image/png" />
   </head>
   <body class="auth-mode">
@@ -730,7 +730,7 @@
         </div>
       </footer>
 
-    <script src="/libs/coloris/coloris.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
     <script src="script.js"></script>
     <script>
       // Initialize Coloris globally on page load
