feat: add clarification that unchecked libraries disable notifications
Added note in dashboard to explain that unchecked/disabled libraries
will not send any notifications, clarifying the expected behavior.

--- a/web/index.html
+++ b/web/index.html
@@ -408,6 +408,7 @@
                           <br>
                           <small style="color: var(--subtext0);">
                             Click "Fetch Libraries" to load your libraries, then select a channel for each one.
+                            <br><strong>Note:</strong> Unchecked libraries will not send any notifications.
                           </small>
                         </div>
                         <button type="button" id="fetch-libraries-btn" class="btn btn-secondary" style="padding: 0.5rem 1rem; margin: 0 0 1rem 0; display: inline-flex; align-items: center; justify-content: center; gap: 0.5rem;">
