--- a/web/index.html
+++ b/web/index.html
@@ -378,6 +378,9 @@
                           id="test-jellyfin-status"
                           style="margin-left: 1rem;"
                         ></span>
+                        <div class="form-text" style="margin-top: 0.5rem;">
+                          Testing the endpoint successfully will automatically populate the Jellyfin Server ID field.
+                        </div>
                       </div>
                       <div class="form-group">
                         <label for="JELLYFIN_SERVER_ID"
@@ -400,8 +403,8 @@
 
                       <!-- Library Notifications Section -->
                       <div class="form-group" style="margin-top: 2rem;">
-                        <label style="font-size: 1.2rem; font-weight: 600; color: var(--mauve);">
-                          Library Channel Mapping
+                        <label style="font-size: 1.2rem; font-weight: 700; color: var(--mauve);">
+                          <strong>Library Channel Mapping</strong>
                         </label>
                         <div class="form-text" style="margin-bottom: 1rem;">
                           Map specific Jellyfin libraries to different Discord channels.
