fix: Set default value for WEBHOOK_DEBOUNCE_MS field to prevent validation error

--- a/web/index.html
+++ b/web/index.html
@@ -408,7 +408,7 @@
                           type="number"
                           id="WEBHOOK_DEBOUNCE_MS"
                           name="WEBHOOK_DEBOUNCE_MS"
-                          placeholder="60000"
+                          value="60000"
                           min="1000"
                           max="300000"
                           step="1000"
