--- a/web/index.html
+++ b/web/index.html
@@ -476,7 +476,12 @@
                         <div class="add-mapping-form" style="margin-top: 1.5rem;">
                           <h4 style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--mauve);">Add New Mapping</h4>
                           <div class="form-group">
-                            <label for="discord-user-select">Discord User</label>
+                            <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 0.5rem;">
+                              <label for="discord-user-select" style="margin-bottom: 0;">Discord User</label>
+                              <button type="button" id="refresh-discord-users-btn" class="btn btn-secondary" style="padding: 0.4rem 0.8rem; font-size: 0.85rem; display: inline-flex; align-items: center; gap: 0.4rem; margin: 0;">
+                                <i class="bi bi-arrow-clockwise"></i> Refresh Users
+                              </button>
+                            </div>
                             <div class="custom-select" id="discord-user-select">
                               <input type="text" class="custom-select-trigger" placeholder="Search Discord users..." readonly />
                               <i class="bi bi-chevron-down custom-select-chevron"></i>
@@ -577,80 +582,6 @@
                         <div class="form-text">
                           When enabled, all bot responses (search and request results) are sent as ephemeral messages (only visible to the user who used the command). When disabled, successful results are visible to everyone in the channel, but warning messages (e.g., "already on Jellyfin") are always ephemeral.
                         </div>
-                      </div>
-
-                      <hr style="margin: 2rem 0; border: none; border-top: 1px solid #444;">
-
-                      <div style="margin-top: 2rem;">
-                        <h3 style="margin-bottom: 1rem; font-size: 1.1rem;">Bot Status Management</h3>
-                        <p class="form-text" style="margin-bottom: 1.5rem;">
-                          Set a custom status for your Discord bot. Choose between manual selection of media or automatic rotation through random items from your Jellyfin library.
-                        </p>
-
-                        <div class="form-group">
-                          <label for="bot-status-mode">Status Mode</label>
-                          <select id="bot-status-mode" style="width: 100%; padding: 0.75rem; border: 1px solid #555; background-color: #222; color: #fff; border-radius: 0.375rem; font-family: inherit;">
-                            <option value="manual">Manual - Pick specific media</option>
-                            <option value="random">Random - Auto-rotate media</option>
-                            <option value="off">Off - No custom status</option>
-                          </select>
-                        </div>
-
-                        <div class="form-group" style="margin-top: 1rem;">
-                          <label for="bot-status-activity">Activity Type</label>
-                          <select id="bot-status-activity" style="width: 100%; padding: 0.75rem; border: 1px solid #555; background-color: #222; color: #fff; border-radius: 0.375rem; font-family: inherit;">
-                            <option value="Watching">Watching</option>
-                            <option value="Listening">Listening to</option>
-                            <option value="Playing">Playing</option>
-                            <option value="Streaming">Streaming</option>
-                          </select>
-                        </div>
-
-                        <!-- Manual Mode Controls -->
-                        <div id="manual-mode-controls" style="display: none; margin-top: 1.5rem;">
-                          <div class="form-group">
-                            <label>Search Media</label>
-                            <input type="text" id="bot-status-search" placeholder="Search for a movie or TV show..." style="width: 100%; padding: 0.75rem; border: 1px solid #555; background-color: #222; color: #fff; border-radius: 0.375rem; font-family: inherit;">
-                          </div>
-
-                          <div id="bot-status-recent-items" style="margin-top: 1rem; max-height: 300px; overflow-y: auto;">
-                            <p class="form-text">Loading recently added items...</p>
-                          </div>
-
-                          <div id="bot-status-search-results" style="margin-top: 1rem; max-height: 300px; overflow-y: auto; display: none;">
-                            <p class="form-text">Search results will appear here</p>
-                          </div>
-
-                          <div id="bot-status-selected" style="margin-top: 1rem; padding: 1rem; background-color: #1a1a1a; border-left: 3px solid #0099ff; border-radius: 0.375rem; display: none;">
-                            <p class="form-text" style="margin: 0;">Selected: <strong id="bot-status-selected-name"></strong></p>
-                          </div>
-
-                          <button id="bot-status-set-manual" style="margin-top: 1rem; width: 100%; padding: 0.75rem; background-color: #0099ff; color: #fff; border: none; border-radius: 0.375rem; cursor: pointer; font-weight: 500;" disabled>
-                            Set Status
-                          </button>
-                        </div>
-
-                        <!-- Random Mode Controls -->
-                        <div id="random-mode-controls" style="display: none; margin-top: 1.5rem;">
-                          <div class="form-group">
-                            <label for="bot-status-interval">Update Interval</label>
-                            <select id="bot-status-interval" style="width: 100%; padding: 0.75rem; border: 1px solid #555; background-color: #222; color: #fff; border-radius: 0.375rem; font-family: inherit;">
-                              <option value="1800000">30 minutes</option>
-                              <option value="3600000">1 hour</option>
-                              <option value="7200000">2 hours</option>
-                              <option value="10800000">3 hours</option>
-                              <option value="18000000">5 hours</option>
-                            </select>
-                          </div>
-
-                          <button id="bot-status-set-random" style="width: 100%; padding: 0.75rem; background-color: #0099ff; color: #fff; border: none; border-radius: 0.375rem; cursor: pointer; font-weight: 500;">
-                            Enable Random Status
-                          </button>
-                        </div>
-
-                        <button id="bot-status-clear" style="margin-top: 1rem; width: 100%; padding: 0.75rem; background-color: #666; color: #fff; border: none; border-radius: 0.375rem; cursor: pointer; font-weight: 500;">
-                          Clear Custom Status
-                        </button>
                       </div>
                     </fieldset>
                   </div>
