changed personal site

--- a/web/index.html
+++ b/web/index.html
@@ -781,7 +781,7 @@
                   </a>
                   <div class="dev-info">
                     <span>Created & Maintained by</span>
-                    <a href="https://github.com/nairdahh" target="_blank" rel="noopener noreferrer" class="dev-link">nairdah</a>
+                    <a href="https://nairdah.me/" target="_blank" rel="noopener noreferrer" class="dev-link">nairdah</a>
                   </div>
                 </div>
                 <div class="dev-footer-right">
@@ -872,7 +872,7 @@
           <div>
             made by
             <a
-              href="https://github.com/nairdahh"
+              href="https://nairdah.me/"
               target="_blank"
               rel="noopener noreferrer"
               >nairdah</a
